--- a/index.html
+++ b/index.html
@@ -297,16 +297,16 @@
           <div class="sectionTitle">Communication</div>
           <div class="focus">Focus: Clarity, active listening, and information flow</div>
 
-          <div class="question">Does this person communicate their ideas and expectations clearly?</div>
+          <div class="focus">Does this person communicate their ideas and expectations clearly?</div>
           <select id="comm_clear"></select>
 
-          <div class="question">Do they actively listen to others without interrupting?</div>
+          <div class="focus">Do they actively listen to others without interrupting?</div>
           <select id="comm_listen"></select>
 
-          <div class="question">Are they effective at keeping the team updated on their progress and potential blockers?</div>
+          <div class="focus">Are they effective at keeping the team updated on their progress and potential blockers?</div>
           <select id="comm_updates"></select>
 
-          <div class="question">Do they provide constructive and respectful feedback?</div>
+          <div class="focus">Do they provide constructive and respectful feedback?</div>
           <select id="comm_feedback"></select>
 
           <div class="divider"></div>
@@ -315,16 +315,16 @@
           <div class="sectionTitle">Collaboration &amp; Teamwork</div>
           <div class="focus">Focus: Synergy, support, and conflict resolution</div>
 
-          <div class="question">Is this person approachable and willing to help other team members?</div>
+          <div class="focus">Is this person approachable and willing to help other team members?</div>
           <select id="collab_help"></select>
 
-          <div class="question">Do they contribute positively to team discussions and brainstorming sessions?</div>
+          <div class="focus">Do they contribute positively to team discussions and brainstorming sessions?</div>
           <select id="collab_discuss"></select>
 
-          <div class="question">How well do they handle disagreements or conflicts within the team?</div>
+          <div class="focus">How well do they handle disagreements or conflicts within the team?</div>
           <select id="collab_conflict"></select>
 
-          <div class="question">Do they prioritize team goals over personal accolades?</div>
+          <div class="focus">Do they prioritize team goals over personal accolades?</div>
           <select id="collab_teamgoals"></select>
 
           <div class="divider"></div>
@@ -333,13 +333,13 @@
           <div class="sectionTitle">Reliability &amp; Accountability</div>
           <div class="focus">Focus: Ownership, timeliness, and trust</div>
 
-          <div class="question">Can you rely on this person to deliver high-quality work on time?</div>
+          <div class="focus">Can you rely on this person to deliver high-quality work on time?</div>
           <select id="rely_onTime"></select>
 
-          <div class="question">Do they take ownership of their mistakes rather than shifting blame?</div>
+          <div class="focus">Do they take ownership of their mistakes rather than shifting blame?</div>
           <select id="rely_ownership"></select>
 
-          <div class="question">Do they follow through on commitments made during meetings?</div>
+          <div class="focus">Do they follow through on commitments made during meetings?</div>
           <select id="rely_follow"></select>
 
           <div class="divider"></div>
@@ -348,13 +348,13 @@
           <div class="sectionTitle">Problem Solving &amp; Quality of Work</div>
           <div class="focus">Focus: Critical thinking, standard of output, and innovation</div>
 
-          <div class="question">Does this person provide thorough and high-quality outputs?</div>
+          <div class="focus">Does this person provide thorough and high-quality outputs?</div>
           <select id="ps_quality"></select>
 
-          <div class="question">Do they approach problems with a solution-oriented mindset?</div>
+          <div class="focus">Do they approach problems with a solution-oriented mindset?</div>
           <select id="ps_solution"></select>
 
-          <div class="question">Are they able to make sound decisions even when under pressure?</div>
+          <div class="focus">Are they able to make sound decisions even when under pressure?</div>
           <select id="ps_pressure"></select>
 
           <div class="divider"></div>
@@ -363,19 +363,19 @@
           <div class="sectionTitle">Professionalism &amp; Integrity</div>
           <div class="focus">Focus: Emotional intelligence, workplace ethics, cultural sensitivity, and office dynamics</div>
 
-          <div class="question">Does this person treat everyone with equal respect, regardless of their seniority, background, or role?</div>
+          <div class="focus">Does this person treat everyone with equal respect, regardless of their seniority, background, or role?</div>
           <select id="prof_respect"></select>
 
-          <div class="question">When they disagree, do they do so with tact and sensitivity?</div>
+          <div class="focus">When they disagree, do they do so with tact and sensitivity?</div>
           <select id="prof_tact"></select>
 
-          <div class="question">Does this person avoid office gossip, negativity, or back-channeling (undermining others behind their back)?</div>
+          <div class="focus">Does this person avoid office gossip, negativity, or back-channeling (undermining others behind their back)?</div>
           <select id="prof_gossip"></select>
 
-          <div class="question">Do they maintain a professional demeanor and emotional control during high-pressure situations?</div>
+          <div class="focus">Do they maintain a professional demeanor and emotional control during high-pressure situations?</div>
           <select id="prof_control"></select>
 
-          <div class="question">Is this person mindful of the diverse cultural backgrounds within the team in their communication style?</div>
+          <div class="focus">Is this person mindful of the diverse cultural backgrounds within the team in their communication style?</div>
           <select id="prof_culture"></select>
 
           <div class="divider"></div>
@@ -384,19 +384,19 @@
           <div class="sectionTitle">Strategic Thinking &amp; Business Acumen</div>
           <div class="focus">Focus: Big picture, long-term vision, market awareness, and alignment with company goals</div>
 
-          <div class="question">Does this person understand how their specific tasks contribute to the wider team and company objectives?</div>
+          <div class="focus">Does this person understand how their specific tasks contribute to the wider team and company objectives?</div>
           <select id="strat_objectives"></select>
 
-          <div class="question">Do they anticipate future risks and opportunities, rather than just reacting to immediate problems?</div>
+          <div class="focus">Do they anticipate future risks and opportunities, rather than just reacting to immediate problems?</div>
           <select id="strat_anticipate"></select>
 
-          <div class="question">Do they consider the cost, ROI, or resource implications of their decisions?</div>
+          <div class="focus">Do they consider the cost, ROI, or resource implications of their decisions?</div>
           <select id="strat_roi"></select>
 
-          <div class="question">Are they able to distinguish between what is urgent and what is important for the long-term success of the project?</div>
+          <div class="focus">Are they able to distinguish between what is urgent and what is important for the long-term success of the project?</div>
           <select id="strat_urgent"></select>
 
-          <div class="question">Do they suggest improvements or new ideas that align with market trends or the company's strategic direction?</div>
+          <div class="focus">Do they suggest improvements or new ideas that align with market trends or the company's strategic direction?</div>
           <select id="strat_trends"></select>
 
           <div class="divider"></div>
@@ -405,13 +405,13 @@
           <div class="sectionTitle">Qualitative Feedback (Open-Ended)</div>
           <div class="focus">Stop / Start / Continue</div>
 
-          <div class="question">Stop: What is one thing this person does that hinders the team's progress or morale?</div>
+          <div class="focus">Stop: What is one thing this person does that hinders the team's progress or morale?</div>
           <textarea id="q_stop" placeholder="Optional…"></textarea>
 
-          <div class="question">Start: What is one thing this person should start doing to be more effective?</div>
+          <div class="focus">Start: What is one thing this person should start doing to be more effective?</div>
           <textarea id="q_start" placeholder="Optional…"></textarea>
 
-          <div class="question">Continue: What is this person’s “superpower” or greatest strength that they should keep utilizing?</div>
+          <div class="focus">Continue: What is this person’s “superpower” or greatest strength that they should keep utilizing?</div>
           <textarea id="q_continue" placeholder="Optional…"></textarea>
 
           <div class="actions">
@@ -880,3 +880,4 @@ const firebaseConfig = {
 </script>
 </body>
 </html>
+
