--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
 
           <div class="focus">Do they provide constructive and respectful feedback?</div>
           <select id="comm_feedback"></select>
+          
+          <div class="small"><b>Communication avg:</b> <span class="pill" id="avg_communication">—</span></div>
 
           <div class="divider"></div>
 
@@ -327,6 +329,8 @@
           <div class="focus">Do they prioritize team goals over personal accolades?</div>
           <select id="collab_teamgoals"></select>
 
+          <div class="small"><b>Collaboration avg:</b> <span class="pill" id="avg_collaboration">—</span></div>
+
           <div class="divider"></div>
 
           <!-- Reliability -->
@@ -342,6 +346,8 @@
           <div class="focus">Do they follow through on commitments made during meetings?</div>
           <select id="rely_follow"></select>
 
+          <div class="small"><b>Reliability avg:</b> <span class="pill" id="avg_reliability">—</span></div>
+
           <div class="divider"></div>
 
           <!-- Problem Solving -->
@@ -356,6 +362,8 @@
 
           <div class="focus">Are they able to make sound decisions even when under pressure?</div>
           <select id="ps_pressure"></select>
+
+          <div class="small"><b>Problem Solving avg:</b> <span class="pill" id="avg_problemSolving">—</span></div>
 
           <div class="divider"></div>
 
@@ -378,6 +386,8 @@
           <div class="focus">Is this person mindful of the diverse cultural backgrounds within the team in their communication style?</div>
           <select id="prof_culture"></select>
 
+          <div class="small"><b>Professionalism avg:</b> <span class="pill" id="avg_professionalism">—</span></div>
+
           <div class="divider"></div>
 
           <!-- Strategic -->
@@ -398,6 +408,8 @@
 
           <div class="focus">Do they suggest improvements or new ideas that align with market trends or the company's strategic direction?</div>
           <select id="strat_trends"></select>
+
+          <div class="small"><b>Strategic avg:</b> <span class="pill" id="avg_strategic">—</span></div>
 
           <div class="divider"></div>
 
@@ -887,6 +899,7 @@ const firebaseConfig = {
 </script>
 </body>
 </html>
+
 
 
 
