--- a/index.html
+++ b/index.html
@@ -426,6 +426,12 @@
           <div class="focus">Continue: What is this person’s “superpower” or greatest strength that they should keep utilizing?</div>
           <textarea id="q_continue" placeholder="Required…"></textarea>
 
+          <div class="divider"></div>
+          <div class="scale" style="margin-top:0;">
+            <div><strong>Overall average (preview)</strong></div>
+            <div><span class="pill" id="avg_overall">—</span></div>
+          </div>
+
           <div class="actions">
             <button class="btn primary" id="submitBtn" type="button">Submit</button>
           </div>
@@ -899,6 +905,7 @@ const firebaseConfig = {
 </script>
 </body>
 </html>
+
 
 
 
